# LinuxWhisper

./: CLAUDE.md  README.md  config.example.toml  pyproject.toml  setup.sh
.github/workflows/: build-whisper-engine.yml
docs/: index.html
packaging/: README.md  linuxwhisper.desktop  loquivox.desktop  system-dependencies.md
packaging/aur/: PKGBUILD
packaging/deb/: build-deb.sh
scripts/: gen-third-party-licenses.sh
src/linuxwhisper/: app.py  config.py  secrets.py  state.py
src/linuxwhisper/handlers/: keyboard.py  mode.py
src/linuxwhisper/managers/: overlay.py
src/linuxwhisper/platform/: __init__.py  wayland.py  x11.py
src/linuxwhisper/services/: audio.py  clipboard.py  image.py  tts.py
src/linuxwhisper/transcription/: deepgram_backend.py  util.py  whispercpp_backend.py
src/linuxwhisper/ui/: chat_overlay.py  recording_overlay.py  settings_dialog.py  tray.py
src/loquivox/: __init__.py  __main__.py  api.py  app.py  config.py  config_io.py  secrets.py  state.py
src/loquivox/handlers/: keyboard.py  mode.py
src/loquivox/managers/: chat.py  history.py  overlay.py
src/loquivox/platform/: __init__.py  base.py  wayland.py  x11.py
src/loquivox/services/: ai.py  audio.py  clipboard.py  image.py  postprocess.py  tts.py
src/loquivox/transcription/: __init__.py  factory.py  groq_backend.py  whispercpp_backend.py
src/loquivox/ui/: chat_overlay.py  recording_overlay.py  settings_dialog.py  tray.py
